Added poll voting, poll reporting, user following, and cleaned code
