# src/controllers/polls.ts
@@ -22,15 +22,20 @@ export async function getRecommendedPoll(userId: number) {
     if (!polls) {
         throw Poll.MESSAGES.NOT_FOUND().buildHTTPError();
     }
-    return Poll.makePublic(polls[Math.floor(Math.random() * polls.length)]);
+
+    const poll = polls[Math.floor(Math.random() * polls.length)];
+    const answered = (await prisma.pollAnswer.findMany({ where: { pollId: poll.id, userId } })).map(a => a.answerId);
+    return { ...Poll.makePublic(poll), answered };
 }
 
-export async function get(pollId: number) {
+export async function get(userId: number, pollId: number) {
     const poll = await prisma.poll.findFirst({ where: { id: pollId }, include: Poll.publicIncludes });
     if (!poll) {
         throw Poll.MESSAGES.NOT_FOUND().buildHTTPError();
     }
-    return Poll.makePublic(poll);
+
+    const answered = (await prisma.pollAnswer.findMany({ where: { pollId, userId } })).map(a => a.answerId);
+    return { ...Poll.makePublic(poll), answered };
 }
 
 export async function createPoll(userId: number, title: string, description: string, type: string, answers: { emoji: string, label: string }[], tags: string[]) {
@@ -57,7 +62,8 @@ export async function createPoll(userId: number, title: string, description: str
     }
 
     // refetch poll to get tags
-    return Poll.makePublic(await prisma.poll.findFirst({ where: { id: poll.id }, include: Poll.publicIncludes }));
+    const newPoll = await prisma.poll.findFirst({ where: { id: poll.id }, include: Poll.publicIncludes });
+    return Poll.makePublic(newPoll);
 }
 
 export async function uploadMedia(userId: number, pollId: number, stream: NodeJS.ReadableStream, filename: string) {
@@ -109,4 +115,99 @@ export async function deletePoll(userId: number, pollId: number) {
     if (fs.existsSync(Media.getPollFolder(pollId))) {
         fs.rmdirSync(Media.getPollFolder(pollId), { recursive: true });
     }
+}
+
+export async function answerPoll(userId: number, pollId: number, answerId: number) {
+    const poll = await prisma.poll.findFirst({ where: { id: pollId }, include: { answers: true } });
+    if (!poll) {
+        throw Poll.MESSAGES.NOT_FOUND().buildHTTPError();
+    }
+
+    const answer = poll.answers.find(a => a.id === answerId);
+    if (!answer) {
+        throw HTTPError.BadRequest();
+    }
+
+    if (poll.type === 'unique') {
+        const oldAnswers = await prisma.pollAnswer.findMany({ where: { pollId, userId } });
+        for (const oldAnswer of oldAnswers) {
+            await prisma.answer.update({ where: { id: oldAnswer.answerId }, data: { nbVotes: { decrement: 1 } } });
+        }
+        await prisma.pollAnswer.deleteMany({ where: { pollId, userId } });
+    }
+
+    const alreadyAnswered = await prisma.pollAnswer.findFirst({ where: { pollId, userId, answerId } });
+    if (!alreadyAnswered) {
+        await prisma.pollAnswer.create({
+            data: {
+                poll: { connect: { id: pollId } },
+                user: { connect: { id: userId } },
+                answer: { connect: { id: answerId } }
+            }
+        });
+        await prisma.answer.update({ where: { id: answerId }, data: { nbVotes: { increment: 1 } }});
+    }
+}
+
+export async function removeAnswerPoll(userId: number, pollId: number, answerId: number) {
+    const poll = await prisma.poll.findFirst({ where: { id: pollId }, include: { answers: true } });
+    if (!poll) {
+        throw Poll.MESSAGES.NOT_FOUND().buildHTTPError();
+    }
+
+    const answer = poll.answers.find(a => a.id === answerId);
+    if (!answer) {
+        throw HTTPError.BadRequest();
+    }
+
+    const alreadyAnswered = await prisma.pollAnswer.findFirst({ where: { pollId, userId, answerId } });
+    if (!alreadyAnswered) {
+        return;
+    }
+    await prisma.pollAnswer.deleteMany({ where: { pollId, userId, answerId } });
+    await prisma.answer.update({ where: { id: answerId }, data: { nbVotes: { decrement: 1 } }});
+}
+
+export async function getAnswers(userId: number, pollId: number) {
+    const poll = await prisma.poll.findFirst({ where: { id: pollId }, include: { answers: true } });
+    if (!poll) {
+        throw Poll.MESSAGES.NOT_FOUND().buildHTTPError();
+    }
+
+    return poll.answers.map(a => ({ id: a.id, count: a.nbVotes }));
+}
+
+export async function reportPoll(userId: number, pollId: number, reason: string) {
+    const poll = await prisma.poll.findFirst({ where: { id: pollId } });
+    if (!poll) {
+        throw Poll.MESSAGES.NOT_FOUND().buildHTTPError();
+    }
+    
+    const alreadyReported = await prisma.pollReports.findFirst({ where: { pollId, userId } });
+    if (alreadyReported) return;
+
+    await prisma.pollReports.create({
+        data: {
+            reason,
+            poll: { connect: { id: pollId } },
+            user: { connect: { id: userId } }
+        }
+    });
+}
+
+export async function getReportScore(userId: number, pollId: number) {
+    // TODO : Should use userId to check privileges
+
+    const USER_TRUST_WEIGHT = 0.5; // (one user with trust level 2 = 1 score)
+
+    const reports = await prisma.pollReports.findMany({ where: { pollId }, include: { user: { include: { profile: true } } } });
+
+    let reportScore = 0;
+    for (const report of reports) {
+        const userTrustLevel = report.user.profile?.reportScore ?? 0;
+        reportScore += 1; // base score
+        reportScore += userTrustLevel * USER_TRUST_WEIGHT; // user trust
+    }
+
+    return reportScore;
 }
